--- a/.dotfiles/tmux/.tmux.conf
+++ b/.dotfiles/tmux/.tmux.conf
@@ -1,6 +1,14 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "arcticicestudio/nord-tmux"
+setw -g mouse on
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
+
+set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+unbind C-b
+set-option -g prefix C-a
+
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 run '~/.tmux/plugins/tpm/tpm'
-run 'zsh'
