--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,14 +1,19 @@
+set -ga terminal-overrides ",xterm-256color*:Tc"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "arcticicestudio/nord-tmux"
 setw -g mouse on
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
+# vim like pane switch
+bind -r ^ last-window
+bind -r k select-pane -U
+bind -r j select-pane -D
+bind -r h select-pane -L
+bind -r l select-pane -R
 
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 unbind C-b
 set-option -g prefix C-a
 
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*256col*:Tc"
 run '~/.tmux/plugins/tpm/tpm'
