--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -207,31 +207,16 @@ exec_always ~/.config/i3/scripts/screen.sh
 exec --no-startup-id picom --config ~/.config/picom/picom
 bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#       polybar example 
-#}
-#
 #
 # class                 border  bground text    indicator child_border
-#client.focused          #964742 #6272A4 #F8F8F2 #964742   #964742
-#client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
-#client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
-#client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
-#client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
-#client.background       #F8F8F2
+client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
+client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
+client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
+client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
+client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
 
-##~~~ Default Color Scheme (Everforest) 
-##
+client.background       #F8F8F2
 
-client.background       #2b3339
-
-# class                 border  backgr. text    indicator child_border
-client.focused          #81A1C1 #81A1C1 #D8DEE9 #81A1C1  #81A1C1
-client.focused_inactive #61AFEF #61AFEF #2E3440 #61AFEF  #61AFEF
-client.unfocused        #3B4252 #3B4252 #D8DEE9 #3B4252  #3B4252
-client.urgent           #BF616A #BF616A #D8DEE9 #BF616A  #BF616A
-client.placeholder      #2E3440 #2E3440 #D8DEE9 #2E3440  #2E3440
 
 bindsym $mod+d exec rofi -show drun -modi drun  
 bindsym $mod+Shift+i exec rofi -show emoji -modi emoji
