--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -31,18 +31,18 @@ pseudo-transparency = true
 [color]
 
 ;# Active Colors
-bg = #2E3440
-fg = #D8DEE9
+bg = #282a36
+fg = #f8f8f2
  
 ;; Colors
 
-alt-bg = #4C566A
-alt-bg2 = #3B4252
+alt-bg = #44475a
+alt-bg2 = #44475a
 
-white = #ECEFF4
-red = #BF616A
-green = #A3BE8C
-yellow = #EBCB8B
-magenta = #B48EAD
-cyan = #8FBCBB
+white = #f8f8f2
+red = #ff5555
+green = #50fa7b
+yellow = #f1fa8c
+magenta = #bd93f9
+cyan = #8be9fd
 dgreen = #A3BE8C
