--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 set -ga terminal-overrides ",xterm-256color*:Tc"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'dracula/tmux'
 setw -g mouse on
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
