--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,7 @@ set -g @plugin "arcticicestudio/nord-tmux"
 setw -g mouse on
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
+#set-window-option -g mode-keys vi
 # vim like pane switch
 bind -r ^ last-window
 bind -r k select-pane -U
@@ -13,7 +14,7 @@ bind -r h select-pane -L
 bind -r l select-pane -R
 
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
-unbind C-b
-set-option -g prefix C-a
+
+bind -n C-f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
 run '~/.tmux/plugins/tpm/tpm'
