--- a/polybar/.config/polybar/modules.ini
+++ b/polybar/.config/polybar/modules.ini
@@ -286,6 +286,16 @@ format-foreground = ${color.dgreen}
 format-padding = 1
 label-maxlen = 25
 
+[module/pomodoro]
+type = custom/script
+exec = ~/.local/bin/pomo 25 5 
+tail = true
+format-background = ${color.bg}
+format-foreground = ${color.red}
+format-padding = 1
+
+
+
 [module/updates]
 type = custom/script
 
