--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,19 +1,168 @@
-set -ga terminal-overrides ",xterm-256color*:Tc"
+color_red="#BF616A"
+color_orange="#d08770"
+color_yellow="#EBCB8B"
+color_green="#A3BE8C"
+color_magenta="#B48EAD"
+color_blue="#81A1C1"
+color_cyan="#88C0D0"
+color_fg="#ECEFF4"
+color_bg="#2e3440"
+color_grey1="#f8fafc"
+color_grey2="#f0f1f4" 
+color_grey3="#eaecf0"
+color_grey4="#d9dce3"
+color_grey5="#c4c9d4"
+color_grey6="#b5bcc9"
+color_grey7="#929cb0"
+color_grey8="#8e99ae"
+color_grey9="#74819a"
+color_grey10="#616d85"
+color_grey11="#464f62"
+color_grey12="#3a4150"
+color_grey13="#333a47"
+color_grey14="#242932"
+color_grey15="#1e222a"
+color_grey16="#1c1f26"
+color_grey17="#0f1115"
+color_grey18="#0d0e11"
+color_grey19="#020203" 
+
+set -g status on
+set -g status-style fg=$color_grey9,bg=$color_grey13
+set -g destroy-unattached on
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+set -g pane-border-style bg=$color_bg,fg=$color_grey14
+set -g pane-active-border-style bg=$color_bg,fg=$color_grey14
+set -g mode-keys vi
+set -g status-keys vi
+set -g mouse on
+set -g escape-time 0
+set -g focus-events on
+set -g history-limit 3000
+set -g history-file ~/.tmux_history
+set -g monitor-activity off
+set -g visual-activity off
+set -g base-index 1
+set -g pane-base-index 1
+set -g -w automatic-rename on
+set -g renumber-windows on
+set -g bell-action none
+set -g status-position bottom
+set -g status-interval 5
+
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin "arcticicestudio/nord-tmux"
-setw -g mouse on
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
-#set-window-option -g mode-keys vi
-# vim like pane switch
-bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+unbind-key C-b
+bind-key C-a send-prefix
+set -g prefix C-t
 
-set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+unbind-key n
+unbind-key "c"
+bind-key -n M-n new-window
+bind-key -n M-[ previous-window
+bind-key -n M-] next-window
+bind-key -n M-1 select-window -t:1
+bind-key -n M-2 select-window -t:2
+bind-key -n M-3 select-window -t:3
+bind-key -n M-4 select-window -t:4
+bind-key -n M-5 select-window -t:5
+bind-key -n M-6 select-window -t:6
+bind-key -n M-7 select-window -t:7
+bind-key -n M-8 select-window -t:8
+bind-key -n M-9 select-window -t:9
+bind-key -n M-0 select-window -t:10
+
+unbind-key '"'
+unbind-key '%'
+bind-key -n M-- split-window -v -c "#{pane_current_path}"
+bind-key -n M-\\ split-window -h -c "#{pane_current_path}"
+bind-key -n M-_ split-window -fv -c "#{pane_current_path}"
+bind-key -n M-| split-window -fh -c "#{pane_current_path}"
+
+bind-key -n M-h resize-pane -L 2
+bind-key -n M-j resize-pane -D 1
+bind-key -n M-k resize-pane -U 1
+bind-key -n M-l resize-pane -R 2
+
+bind-key -n M-z resize-pane -Z
+
+unbind-key '{'
+unbind-key '}'
+bind-key -r H swap-pane -U
+bind-key -r L swap-pane -D
+
+bind-key -n M-q kill-pane
+
+bind-key -r '<' swap-window -t -1
+bind-key -r '>' swap-window -t +1
+
+unbind-key '&'
+bind-key -n M-Q kill-window
+bind-key -n M-K kill-window -a
+
+bind-key -n M-v copy-mode
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X select-line
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi Escape send-keys -X cancel
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+bind-key -T copy-mode-vi WheelUpPane select-pane \; send-keys -t '{mouse}' -X clear-selection \; send-keys -t '{mouse}' -X -N 5 scroll-up
+bind-key -T copy-mode-vi WheelDownPane select-pane \; send-keys -t '{mouse}' -X clear-selection \; send-keys -t '{mouse}' -X -N 5 scroll-down
+
+bind-key '/' copy-mode \; send-keys "/"
+bind-key '?' copy-mode \; send-keys "?"
+
+set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+
+mode_separator=""
+set -g @mode_indicator_prefix_prompt " WAIT #[default]#[fg=$color_magenta]$mode_separator"
+set -g @mode_indicator_prefix_mode_style bg=$color_magenta,fg=$color_bg,bold
+set -g @mode_indicator_copy_prompt " COPY #[default]#[fg=$color_yellow]$mode_separator"
+set -g @mode_indicator_copy_mode_style bg=$color_yellow,fg=$color_bg,bold
+set -g @mode_indicator_sync_prompt " SYNC #[default]#[fg=$color_red]$mode_separator"
+set -g @mode_indicator_sync_mode_style bg=$color_red,fg=$color_bg,bold
+set -g @mode_indicator_empty_prompt " TMUX #[default]#[fg=$color_cyan]$mode_separator"
+set -g @mode_indicator_empty_mode_style bg=$color_cyan,fg=$color_bg,bold
+
+set -g @batt_icon_status_charged ' '
+set -g @batt_icon_status_charging ' '
+set -g @batt_icon_status_discharging ' '
+set -g @batt_color_charge_primary_tier8 $color_green
+set -g @batt_color_charge_primary_tier7 $color_green
+set -g @batt_color_charge_primary_tier6 $color_green
+set -g @batt_color_charge_primary_tier5 $color_green
+set -g @batt_color_charge_primary_tier4 $color_green
+set -g @batt_color_charge_primary_tier3 $color_yellow
+set -g @batt_color_charge_primary_tier2 $color_orange
+set -g @batt_color_charge_primary_tier1 $color_red
+set -g @batt_icon_charge_tier8 ''
+set -g @batt_icon_charge_tier7 ''
+set -g @batt_icon_charge_tier6 ''
+set -g @batt_icon_charge_tier5 ''
+set -g @batt_icon_charge_tier4 ''
+set -g @batt_icon_charge_tier3 ''
+set -g @batt_icon_charge_tier2 ''
+set -g @batt_icon_charge_tier1 ''
+
+set -g @online_icon "  "
+set -g @offline_icon ""
+
+set -g status-right-length 100
+set -g status-left '#{tmux_mode_indicator}'
+set -g status-right "#[bg=$color_grey13,fg=$color_grey9]  #{cpu_percentage}   #{ram_percentage}  #{battery_icon_charge}#{battery_icon_status}#{battery_percentage} #[fg=$color_grey14]#[bg=$color_grey14,fg=$color_grey8,bold] %A, %d %b %Y %I:%M %p "
+set -g status-justify left
+
+set -g window-status-current-format " #[fg=$color_grey8,bold]卑 #I:#W"
+set -g window-status-format " #[fg=$color_grey9]喝 #I:#W"
 
 bind -n C-f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
