--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -96,7 +96,7 @@ bind-key c run-shell 'MyCWD="#{pane_current_path}"; tmux new-window -c "$MyCWD"'
 
 bind -n C-f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 run '~/.tmux/plugins/tpm/tpm'
--g @batt_color_charge_primary_tier1 $color_red
+set -g @batt_color_charge_primary_tier1 $color_red
 set -g @batt_icon_charge_tier8 ''
 set -g @batt_icon_charge_tier7 ''
 set -g @batt_icon_charge_tier6 ''
